# scanner_analytics

./: .env.example  .gitignore  CHANGELOG.md  LICENSE  README.md  extract.js  extract_test.js  replace.js  requirements.txt  scratch-os-dia.ts  setup.bat
.github/workflows/: release.yml
data/2026-04-09T13-56-00-230Z/: Scanner 4.0 - CE - Deslocamentos.csv.crdownload
exemple/: DeslocamentoRepository.js  DeslocamentoService.js  README.md  RemoteDeslocamentoRepository.js  RemoteSpotfireProvider.js  SpotfireProvider.js  createDependencies.js  integration-worker.js
project_base_Exemplo_deslocamenotos_analytics/: calculo_tempprep_semosentreos.md
project_base_Exemplo_deslocamenotos_analytics/src/config/: __init__.py
project_base_Exemplo_deslocamenotos_analytics/src/core/: __init__.py  utils.py
project_base_Exemplo_deslocamenotos_analytics/src/services/: aggregator.py
project_base_analytics/: README.md  pyproject.toml
project_base_analytics/result/: analise_apontamento.xlsx  relatorio_analise_equipes.docx  ~$analise_apontamento.xlsx
project_base_analytics/src/: __init__.py
project_base_analytics/src/services/: calculator.py  excel_formatter.py
src/: README.md  __main__.py  main.py
src/backend/: .env.example  README.md  bases.json  package-lock.json  package.json  test-start.js
src/backend/scripts/: free-port.ps1  start-edge-debug.ps1
src/backend/src/: main.ts
src/config/: settings.py
src/core/: models.py
src/data/: Ranking-Detalhamento_Diário.csv  Tab_Completa-Deslocamentos.csv  scanner-analytics-report.json  scanner-analytics-report.md
src/frontend/: README.md  angular.json  package-lock.json  package.json  tsconfig.json
src/frontend/src/: index.html  main.js  main.js.map  main.ts  styles.css
src/frontend/src/app/: app.component.js  app.component.js.map  app.component.ts  app.config.js  app.config.js.map  app.config.ts  app.routes.js  app.routes.js.map  app.routes.ts
src/frontend/src/app/models/: spotfire-catalog.model.js  spotfire-catalog.model.js.map  (+1 more)
src/frontend/src/environments/: environment.js  environment.js.map  environment.ts
src/reports/: __init__.py  docx_builder.py  report_generator.py
src/services/: __init__.py  data_loader.py  pipeline.py
(+52 files in other folders)
